--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "keywords": ["laravel", "framework", "task", "manager"],
     "license": "MIT",
     "require": {
+        "ext-pdo": "*",
+        "ext-pgsql": "*",
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
