--- a/package.json
+++ b/package.json
@@ -12,5 +12,23 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
-    }
+    },
+    "name": "php-project-57",
+    "version": "1.0.0",
+    "description": "[![Actions Status](https://github.com/RasmuS2024/php-project-57/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/RasmuS2024/php-project-57/actions)",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/RasmuS2024/php-project-57.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/RasmuS2024/php-project-57/issues"
+    },
+    "homepage": "https://github.com/RasmuS2024/php-project-57#readme"
 }
