--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.4",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "larastan/larastan": "^3.4",
         "phpcsstandards/phpcsdevtools": "^1.0",
         "phpcsstandards/phpcsextra": "^1.1",
         "phpstan/extension-installer": "^1.4",
