--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "engines": {
+        "node": "22.14.0",
+        "npm": "10.9.2"
+    },
     "private": true,
     "type": "module",
     "scripts": {
