--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,35 +1,44 @@
 parameters:
-  level: 1
+  level: 5
   paths:
-    - public
-    - app
-    - src
-  fileExtensions:
-    - php
+    - code/app
+    - code/routes
+    - code/tests
+    - tests
 
   excludePaths:
-    - */vendor/*
+    - code/routes/console.php
+    - code/routes/auth.php
+    - code/routes/channels.php (?)
+    - code/app/Providers/*
+    - code/app/Http/Middleware/*
+    - code/app/Exceptions/Handler.php (?)
+    - code/app/Models/User.php
+    - code/app/Http/Controllers/Auth/*
+    - code/tests/Feature/Auth/*
+    - code/app/Http/Kernel.php (?)
 
   reportUnmatchedIgnoredErrors: false
-  reportMaybesInPropertyPhpDocTypes: false
 
   ignoreErrors:
-   - '#Cannot call method fetchAll\(\) on PDOStatement\|false#'
-   - '#Undefined variable: \$this#'
-   - '#Parameter \#1 \$array of static method Illuminate\\Support\\Arr::get\(\)#'
-
-   - '#Call to an undefined method Illuminate\\Http\\Client\\Response::#'
-   - '#Call to an undefined method Illuminate\\Database\\Query\\Builder::#'
-   - '#Cannot access offset [\S]+ on array\{#'
    - '#Parameter \#1 \$message of function flash expects string\|null, array\|string\|null given.#'
-   - '#Call to an undefined method Illuminate\\Testing\\TestResponse::getSession\(\)#'
-   - '#Call to an undefined method Illuminate\\Support\\Optional::text\(\)#'
+   - '#Cannot call method [\w]+\(\) on App\\Models\\User\|null.#'
    - '#Dynamic call to static method#'
-   - '#Access to an undefined property object::\$id#'
-   - '#Call to an undefined method Illuminate\\Http\\RedirectResponse\|Illuminate\\Routing\\Redirector::route\(\)#'
+   # TODO: remove this when larastan release new version
+   - '#<int, Illuminate\\Database\\Eloquent\\Model>\|Illuminate\\Database\\Eloquent\\Model\::\$id#'
+   - '#<int, Illuminate\\Database\\Eloquent\\Model>\|Illuminate\\Database\\Eloquent\\Model\::\$createdBy#'
+   - '#Tests\\Feature\\[\w]+\::\$user \(App\\Models\\User\) does not accept#'
+   - '#Illuminate\\Foundation\\Testing\\TestCase::actingAs\(\) expects Illuminate\\Contracts\\Auth\\Authenticatable#'
+   - '#Illuminate\\Foundation\\Testing\\TestCase::post\(\) expects array, array\|Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>#'
+   - '#Illuminate\\Foundation\\Testing\\TestCase::assertDatabaseHas\(\) expects array, array\|Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>#'
+   - '#Illuminate\\Foundation\\Testing\\TestCase::patch\(\) expects array, array\|Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>#'
+   - '#Unable to resolve the template type TKey in call to function collect#'
+   - '#Unable to resolve the template type TValue in call to function collect#'
+   - '#Call to an undefined method Illuminate\\Http\RedirectResponse|Illuminate\\Routing\\Redirector::route\(\)#'
+   - '#Parameter \#1 \$view of function view expects view-string\|null, string given.#'
    # TODO: remove this when add in courses theory of returning types
    - '#has no return type specified#'
    - '#should return .* but returns#'
    - '#Anonymous function should have native return type#'
-   -
-     identifier: missingType.iterableValue
+   - identifier: missingType.iterableValue
+   - identifier: missingType.generics
