--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laracasts/flash": "^3.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "rollbar/rollbar": "~4.0",
+        "rollbar/rollbar-laravel": "^8.1",
         "spatie/laravel-html": "^3.12"
     },
     "require-dev": {
