--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,18 @@ sonar.projectVersion=1.0
 # Пути к исходному коду
 sonar.sources=app,config,routes,database
 sonar.tests=tests
-sonar.php.coverage.reportPaths=reports/coverage.xml
+# sonar.php.coverage.reportPaths=reports/coverage.xml
 
 # Исключения
 sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
 
 # Для Laravel
 sonar.language=php
+#sonar.php.coverage.reportPaths=build/coverage.xml
+#sonar.php.tests.reportPaths=build/test-reports.xml
+sonar.php.coverage.reportPaths=reports/coverage.xml
+sonar.php.tests.reportPaths=reports/junit.xml
+
+# Дополнительные настройки
 sonar.sourceEncoding=UTF-8
+sonar.php.file.suffixes=.php,.blade.php
