edit SonarCloud config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,9 @@ sonar.projectVersion=1.0
 # Пути к исходному коду
 sonar.sources=app,config,routes,database
 sonar.tests=tests
+sonar.test.inclusions=tests/**/*
+sonar.cpd.exclusions=tests/**/*
+sonar.coverage.exclusions=tests/**/*
 # sonar.php.coverage.reportPaths=reports/coverage.xml
 
 # Исключения
