--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,32 +1,39 @@
-name: SonarCloud Scan
+name: SonarCloud
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    types: [opened, synchronize]
 
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.2
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
-          coverage: pcov
-
+          php-version: '8.2'
+          coverage: xdebug
+          
       - name: Install dependencies
-        run: composer install
-
-      - name: Generate coverage reports
         run: |
-          mkdir -p reports
-          vendor/bin/phpunit --coverage-clover reports/coverage.xml --log-junit reports/junit.xml
-
+          composer install --prefer-dist --no-progress
+          cp .env.example .env
+          php artisan key:generate
+          
+      - name: Generate coverage report
+        run: |
+          mkdir -p tests/Unit  # Создаем директорию если отсутствует
+          vendor/bin/phpunit --coverage-clover coverage.xml
+          
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.php.coverage.reportPaths=coverage.xml
+            -Dsonar.coverage.exclusions=tests/**/*
+            -Dsonar.cpd.exclusions=tests/**/*
