--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # sonar-project.properties
 sonar.projectKey=RasmuS2024_php-project-57
+sonar.organization=rasmus2024
 sonar.projectName=php-project-57
 sonar.projectVersion=1.0
 
@@ -16,10 +17,10 @@ sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
 
 # Для Laravel
 sonar.language=php
-#sonar.php.coverage.reportPaths=build/coverage.xml
-#sonar.php.tests.reportPaths=build/test-reports.xml
-sonar.php.coverage.reportPaths=reports/coverage.xml
-sonar.php.tests.reportPaths=reports/junit.xml
+sonar.php.coverage.reportPaths=build/logs/clover.xml
+sonar.php.tests.reportPath=build/logs/junit.xml
+# sonar.php.coverage.reportPaths=reports/coverage.xml
+# sonar.php.tests.reportPaths=reports/junit.xml
 
 # Дополнительные настройки
 sonar.sourceEncoding=UTF-8
