--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,29 +6,39 @@ on:
   
 jobs:
   tests:
-      name: Tests
-
-      runs-on: ubuntu-latest
+    name: Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-          with:
-            fetch-depth: 0
+      - name: Setup PHP with Xdebug
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          coverage: xdebug
           
-        - name: Setup PHP with Xdebug
-          uses: shivammathur/setup-php@v2
-          with:
-            php-version: '8.2'
-            coverage: xdebug
-            
-        - name: Install dependencies with composer
-          run: composer update --no-ansi --no-interaction --no-progress
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
           
-        - name: Run tests with phpunit/phpunit
-          run: vendor/bin/phpunit --coverage-clover=coverage.xml
+      - name: Install dependencies with composer
+        run: composer install --no-ansi --no-interaction --no-progress
+      
+      - name: Install npm dependencies
+        run: npm install
+      
+      - name: Build assets
+        run: npm run build
           
-        - name: SonarQube Scan
-          uses: SonarSource/sonarqube-scan-action@v4
-          env:
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Run tests with phpunit/phpunit
+        run: vendor/bin/phpunit --coverage-clover=coverage.xml
+          
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
