--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,8 +37,10 @@ jobs:
           
       - name: Run tests with phpunit/phpunit
         run: vendor/bin/phpunit --coverage-clover=coverage.xml
-          
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+# if Automatic Analysis is enabled, then do not include the following lines:   
+# если автоматический анализ включен, то следующие строки не включать: ('это приводит к ошибке при выполнении Action на GitHub!')      
+#      - name: SonarQube Scan
+#        uses: SonarSource/sonarqube-scan-action@v4
+#        env:
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
