fix testing logic

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.tests=tests
 sonar.test.inclusions=tests/**/*
 sonar.cpd.exclusions=tests/**/*
 sonar.coverage.exclusions=tests/**/*
-# sonar.php.coverage.reportPaths=reports/coverage.xml
+sonar.php.coverage.reportPaths=reports/coverage.xml
 
 # Исключения
 sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
