--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,36 @@
-/.phpunit.cache
-/node_modules
-/node_modules/.vite
-/public/build
-/public/hot
-/public/storage
-/reports/coverage-html
-/storage/*.key
-/storage/pail
-/vendor
-/build
+.phpunit.cache
+.phpunit.result.cache
+.editorconfig
 .env
 .env.backup
 .env.production
-.phpactor.json
-.phpunit.result.cache
-.phpunit.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/auth.json
+auth.json
+.phpactor.json
+
+/node_modules
+/node_modules/.vite
+/vendor
+/bootstrap/cache/*
+/build
+/reports
+/reports/coverage-html
+
+/public/build
+/public/hot
+/public/storage
+
+/storage/*.key
+/storage/pail
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+/storage/logs/*
+
 /.fleet
 /.idea
 /.nova
