fixed SonarQube CI.yml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,47 +1,20 @@
-name: CI
-
+name: Build
 on:
-  - pull_request
-  - push
-  
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
-  tests:
-    name: Tests
+  sonarqube:
+    name: SonarQube
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-      
-      - name: Setup PHP with Xdebug
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          coverage: xdebug
-          
-      - name: Install Node.js (v18 LTS)
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          
-      - name: Install dependencies with composer
-        run: composer install --no-ansi --no-interaction --no-progress
-      
-      - name: Install npm dependencies
-        run: npm install
-      
-      - name: Build assets (with CI=false)
-        run: CI=false npm run build  # Важно!
-          
-      - name: Run tests with phpunit/phpunit
-        run: vendor/bin/phpunit --coverage-clover=coverage.xml
-
-# if Automatic Analysis is enabled, then do not include the following lines:   
-# если автоматический анализ включен, то следующие строки не включать:
-# ('это приводит к ошибке при выполнении Action на GitHub!')      
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
