fixed dubles in UsersTableSeeder

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,11 +5,13 @@ sonar.projectName=php-project-57
 sonar.projectVersion=1.0
 
 # Пути к исходному коду
-sonar.sources=app,config,routes,database
+sonar.sources=app/Http/Controllers
+sonar.exclusions=app/Http/Controllers/**/*
 sonar.tests=tests
 sonar.test.inclusions=tests/**/*
 sonar.cpd.exclusions=tests/**/*
 sonar.coverage.exclusions=tests/**/*
+sonar.coverage.exclusions=app/Http/Controllers/**/*
 sonar.php.coverage.reportPaths=reports/coverage.xml
 
 # Исключения
