Modified CI.yml - added migrations

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,10 @@ jobs:
           touch database/database.sqlite
           echo "DB_CONNECTION=sqlite" >> .env
           echo "DB_DATABASE=$(pwd)/database/database.sqlite" >> .env
-          
+
+      - name: Run migrations
+        run: php artisan migrate --force
+
       - name: Run Linting
         run: make lint
 
