--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,9 +25,20 @@ jobs:
       - name: Install Composer dependencies
         run: |
           composer install --prefer-dist --no-progress
-          # Установка инструментов анализа кода
           composer require --dev squizlabs/php_codesniffer phpstan/phpstan
           
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          
+      - name: Install npm dependencies
+        run: npm ci
+      
+      - name: Build frontend assets
+        run: npm run build
+      
       - name: Create reports directory
         run: mkdir -p reports
       
@@ -38,6 +49,7 @@ jobs:
           touch database/database.sqlite
           echo "DB_CONNECTION=sqlite" >> .env
           echo "DB_DATABASE=$(pwd)/database/database.sqlite" >> .env
+          echo "APP_ENV=production" >> .env
 
       - name: Run migrations
         run: php artisan migrate --force
