--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,8 +18,8 @@ sonar.cpd.exclusions=tests/**/*
 
 # Для Laravel
 sonar.language=php
-sonar.php.coverage.reportPaths=reports/coverage.xml
-sonar.php.tests.reportPaths=reports/junit.xml
+sonar.php.coverage.reportPaths=coverage.xml
+sonar.php.tests.reportPaths=junit.xml
 
 # Дополнительные настройки
 sonar.sourceEncoding=UTF-8
