edited sonar-project config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,8 @@ sonar.test.inclusions=tests/**/*
 # Исключения
 sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
 sonar.coverage.exclusions=tests/**/*
-sonar.coverage.exclusions=app/Http/Controllers/**/*
-sonar.exclusions=app/Http/Controllers/**/*
+# sonar.coverage.exclusions=app/Http/Controllers/**/*
+# sonar.exclusions=app/Http/Controllers/**/*
 sonar.cpd.exclusions=tests/**/*
 
 # Для Laravel
