--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,10 +58,7 @@ jobs:
         run: make lint
 
       - name: Run Tests
-        run: |
-          vendor/bin/phpunit \
-            --coverage-clover=coverage.xml \
-            --whitelist 'app/Http/Controllers'
+        run: vendor/bin/phpunit --coverage-clover=coverage.xml
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
