Edited config in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.tests=tests
 sonar.test.inclusions=tests/**/*
 
 # Исключения
-sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**,app/Http/Controllers/**/*
+sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
 sonar.coverage.exclusions=tests/**/*
 # sonar.coverage.exclusions=app/Http/Controllers/**/*
 # sonar.exclusions=app/Http/Controllers/**/*
