Edited sonar-project.properties paths

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,10 +10,8 @@ sonar.tests=tests
 sonar.test.inclusions=tests/**/*
 
 # Исключения
-sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**
-sonar.coverage.exclusions=tests/**/*
-# sonar.coverage.exclusions=app/Http/Controllers/**/*
-# sonar.exclusions=app/Http/Controllers/**/*
+sonar.exclusions=vendor/**,node_modules/**,public/**,storage/**,bootstrap/**,app/Http/Controllers/Auth/*
+sonar.coverage.exclusions=tests/**/*,app/Http/Controllers/Auth/*
 sonar.cpd.exclusions=tests/**/*
 
 # Для Laravel
