--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.10.1",
         "rollbar/rollbar": "~4.0",
         "rollbar/rollbar-laravel": "^8.1",
-        "spatie/laravel-html": "^3.12"
+        "spatie/laravel-html": "^3.12",
+        "symfony/error-handler": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
