--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "rollbar/rollbar": "~4.0",
         "rollbar/rollbar-laravel": "^8.1",
         "spatie/laravel-html": "^3.12",
-        "symfony/error-handler": "^7.0"
+        "symfony/error-handler": "7.2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
