--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "rollbar/rollbar": "~4.0",
         "rollbar/rollbar-laravel": "^8.1",
         "spatie/laravel-html": "^3.12",
-        "symfony/error-handler": "7.2.0"
+        "symfony/error-handler": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -86,6 +86,9 @@
             "php-http/discovery": true,
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.2.20"
         }
     },
     "minimum-stability": "stable",
