--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "rollbar/rollbar": "~4.0",
         "rollbar/rollbar-laravel": "^8.1",
         "spatie/laravel-html": "^3.12",
+        "spatie/laravel-query-builder": "^6.3",
         "symfony/error-handler": "^7.3"
     },
     "require-dev": {
